# Library-Management-System

./: .gitignore  Book.cpp  Book.h  Borrower.cpp  Borrower.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Library.cpp  Library.h  README.md  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Utils.h  books.tsv  gui.sh  main.cpp  run.sh  users.tsv
docs/sql/: schema.sql
src/cli/: BookRecommendationService.cpp  BookRecommendationService.h  LibraryCliController.cpp  LibraryCliController.h
src/db/: DBManager.cpp  DBManager.h
src/gui/: AddBookDialog.cpp  AddBookDialog.h  AddUserDialog.cpp  AddUserDialog.h  AppSettings.cpp  AppSettings.h  AppearanceDialog.cpp  AppearanceDialog.h  BookDetailDialog.cpp  BookDetailDialog.h  BookTableModel.cpp  BookTableModel.h  BorrowDaysDialog.cpp  BorrowDaysDialog.h  BorrowRecordsDialog.cpp  BorrowRecordsDialog.h  EditBookDialog.cpp  EditBookDialog.h  LibraryController.cpp  LibraryController.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MyBorrowsDialog.cpp  MyBorrowsDialog.h  RecommendBooK.cpp  RecommendBooK.h  ResetPasswordDialog.cpp  ResetPasswordDialog.h  UiTheme.cpp  UiTheme.h  UsersListDialog.cpp  UsersListDialog.h  main_qt.cpp
tests/: LibraryCoreTests.cpp  UiThemeTest.cpp
